--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -48,10 +48,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Products</a></li>
+        <li><a href="Productos.html">Productos</a></li>
         <li><a href="#">Deals</a></li>
         <li><a href="#">Stores</a></li>
-        <li><a href="contactenos.html">contactenos</a></li>
+        <li><a href="contactenos.html">Contactenos</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
@@ -117,7 +117,7 @@
   <p>Online Store Copyright</p>  
   <form class="form-inline">Get deals:
     <input type="email" class="form-control" size="50" placeholder="Email Address">
-    <button type="button" class="btn btn-danger">Sign Up</button>
+    <button type="Submit" class="btn btn-info">Sign Up</button>
   </form>
 </footer>
 
