--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -46,7 +46,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="#">Inicio</a></li>
         <li><a href="Productos.html">Productos</a></li>
         <li><a href="#">Deals</a></li>
         <li><a href="#">Stores</a></li>
