--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -24,6 +24,10 @@
       background-color: #f2f2f2;
       padding: 25px;
     }
+    .carousel-inner img {
+      width: 100%;
+      height: 100%;
+  }
   </style>
 </head>
 <body>
@@ -65,8 +69,11 @@
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+        <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+      <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+      </div>
       </div>
     </div>
     <div class="col-sm-4"> 
