--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -71,7 +71,7 @@
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
         <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+      <img src="imagen1.jpg" alt="Agenda" width="1100" height="500">
       <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
       </div>
