--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -71,6 +71,7 @@
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
         <div class="carousel-inner">
     <div class="carousel-item active">
+    <div class="panel-body"><img src="imagen1.jpg" alt="Agenda" style="width:100%"></div>
       <img src="imagen1.jpg" alt="Agenda" width="700" height="500">
       <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       
