--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -70,21 +70,21 @@
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
         <div class="carousel-inner">
-    <div class="carousel-item active">
-    <div class="panel-body"><img src="imagen1.jpg" alt="Agenda" style="width:50%"></div>
+    <div class="panel panel-primary">
+    <div class="panel-body"><img src="imagen1.jpg" alt="Agenda" style="width:70%"></div>
     <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
      </div>
     
     <div class="col-sm-4"> 
-      <div class="panel panel-danger">
+      <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
         <div class="panel-body"><<img src="imagen2.jpg" alt="Agenda" style="width:70%"></div>
         <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
     </div>
     <div class="col-sm-4"> 
-      <div class="panel panel-success">
+      <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
         <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
