--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -70,8 +70,8 @@
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
         <div class="carousel-inner">
-    <div class="panel panel-primary">
-    <div class="panel-body"><img src="imagen1.jpg" alt="Agenda" style="width:70%"></div>
+    <div class="panel-heading">BLACK FRIDAY DEAL</div>
+    <div class="panel-body"><img src="imagen1.jpg" alt="Agenda" style="width:50%"></div>
     <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
      </div>
@@ -79,7 +79,7 @@
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><<img src="imagen2.jpg" alt="Agenda" style="width:70%"></div>
+        <div class="panel-body"><<img src="imagen2.jpg" alt="Agenda" style="width:50%"></div>
         <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
     </div>
