--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -76,17 +76,19 @@
       </div>
      </div>
     
-    <div class="col-sm-4"> 
+     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><<img src="imagen2.jpg" alt="Agenda" style="width:50%"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+        <div class="carousel-inner">
+    <div class="panel-heading">BLACK FRIDAY DEAL</div>
+    <div class="panel-body"><img src="imagen2.jpg" alt="Agenda" style="width:50%"></div>
+    <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+        <div class="panel-body"><img src="imagen2.jpg" alt="Agenda" style="width:50%"></div>
         <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
     </div>
