--- a/tiendaoline.html
+++ b/tiendaoline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Tienda Online</title>
+  <title>Erika's Store</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -33,8 +33,8 @@
 <body>
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Online Store</h1>      
-    <p>Mission, Vission & Values</p>
+    <h1>Erika's Store</h1>      
+    <p>My First Page</p>
   </div>
 </div>
 
@@ -46,14 +46,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">Erika</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Inicio</a></li>
         <li><a href="Productos.html">Productos</a></li>
-        <li><a href="#">Deals</a></li>
-        <li><a href="#">Stores</a></li>
         <li><a href="contactenos.html">Contactenos</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -63,93 +61,67 @@
     </div>
   </div>
 </nav>
-
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <div class="container">    
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="carousel-inner">
-    <div class="panel-heading">BLACK FRIDAY DEAL</div>
-    <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:50%"></div>
-    <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+        <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:100%"></div>
+         <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
      </div>
     
-     <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="carousel-inner">
-    <div class="panel-heading">BLACK FRIDAY DEAL</div>
-    <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:50%"></div>
-    <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:50%"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br>
-
-<div class="container">    
-  <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-heading">BLACK FRIDAY DEAL</div>
+          <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:100%"></div>
+          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
         <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+        <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:100%"></div>
         <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
       </div>
     </div>
   </div>
 </div><br><br>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-      
+
+<div class="container">    
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-heading">BLACK FRIDAY DEAL</div>
+        <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:100%"></div>
+        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+      </div>
+    </div>
+    <div class="col-sm-4"> 
+      <div class="panel panel-primary">
+        <div class="panel-heading">BLACK FRIDAY DEAL</div>
+        <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:100%"></div>
+        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+      </div>
+    </div>
+    <div class="col-sm-4"> 
+      <div class="panel panel-primary">
+        <div class="panel-heading">BLACK FRIDAY DEAL</div>
+        <div class="panel-body"><img src="imagen3.jpg" alt="Agenda" style="width:100%"></div>
+        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+      </div>
+    </div>
+  </div>
+</div><br><br>
+   
         <div id="section1" class="container-fluid bg-success" style="padding-top:70px;padding-bottom:70px">
           <h1>Section 1</h1>
           <div class="container">
             <h2>Form Validation</h2>
             <p>In this example, we use <code>.was-validated</code> to indicate what's missing before submitting the form:</p>
-            <form action="/action_page.php" class="was-validated">
-              <div class="form-group">
-                <label for="uname">Username:</label>
-                <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
-                <div class="valid-feedback">Valid.</div>
-                <div class="invalid-feedback">Please fill out this field.</div>
-              </div>
-              <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
-                <div class="valid-feedback">Valid.</div>
-                <div class="invalid-feedback">Please fill out this field.</div>
-              </div>
-              <div class="form-group form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" name="remember" required> I agree on blabla.
-                  <div class="valid-feedback">Valid.</div>
-                  <div class="invalid-feedback">Check this checkbox to continue.</div>
-                </label>
-              </div>
-             <!--  <button type="submit" class="btn btn-primary">Submit</button> -->
-              <input type="submit" class="btn btn-info" value="Submit">
-            </form>
+            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+          <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
           </div>
         </div>
         <div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px">
